# pacilfess-discord

./: .gitignore  README.md  database.sql  manage.py  migrate.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 4714839497ce_add_serverconfig.py  920a401e8df6_init.py  d55681f39187_add_cooldown.py
migrations/: 0001_init.sql  0002_add_attachment.sql  0003_convert_hash.py  0004_add_violations.sql
pacilfess_discord/: bot.py  config.py  models.py  typing.py
pacilfess_discord/cogs/: Admin.py  Config.py  Fess.py
pacilfess_discord/helper/: database.py  db.py  embed.py  hasher.py  regex.py  utils.py
